[package]
name = "clippy"
version = "0.1.0"
authors = ["Gerard Clos <clos.gerard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.14.1"
envy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
elastic = "0.21.0-pre.5"
elastic_derive = "0.21.0-pre.5"
serde_json = "1"

